<resources>
    <string name="app_name">code</string>
    <string name="selection_screen">Selection screen</string>
    <string name="retrieve_images_from_internal_storage">Retrieve images from internal storage</string>
    <string name="internal_storage_images">Internal storage images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_camera">Camera</string>
    <string name="str_internal_storage">Internal Storage</string>
    <string name="str_external_storage">External Storage</string>
    <string name="image">image</string>
    <string name="private_true">Private-True</string>
    <string name="str_ok">OK</string>
    <string name="private_false">Private-False</string>
    <string name="str_mode">Mode</string>
    <string name="select_the_mode_of_storage">Select the mode of storage</string>
</resources>